modify the userResponse, also modify the login response in filter